# ai_helps_pwr

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
config/: config
data/: .gitkeep  email_categories.json  email_generation_prompt.txt  test_prompt.json
data/email/: index.html  index.txt
experiments/config/: models.yaml
experiments/notebooks/: Untitled.ipynb
experiments/scripts/: .gitkeep  conversation.py  email_responder_example.py  send_email.py
notebooks/: .gitkeep
src/ai_helps_pwr/: logger.py  settings.py
src/ai_helps_pwr/email_assistance/: email_categories.py  email_classificator.py  email_container.py  email_responder.py  email_sender.py
src/ai_helps_pwr/models/: __init__.py  chatgpt.py  gpt.py
src/ai_helps_pwr/utils/: common.py
src/streamlit_demo_app/: demo_app.py  settings.py  streamlit_main_wrapper.py  style.css
tests/: dummy_test.py
