[tool.poetry]
name = "ai-helps-pwr"
version = "0.1.0"
description = ""
authors = [
    "Wojciech Korczyński <wojtek19962a32@gmail.com>",
    "Joanna Waczyńska <joanna.waczynska@gmail.com >",
]
readme = "README.md"
packages = [
    {include = "ai_helps_pwr", from = "src"},
    {include = "streamlit_demo_app", from = "src"},
]

[tool.poetry.scripts]
demo_app = "streamlit_demo_app.streamlit_main_wrapper:main"

[tool.poetry.dependencies]
python = "3.9.9"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
pytest = "^7.3.1"
streamlit = "^1.22.0"
click = "^8.1.3"
tox = "^4.5.1"
openai = "^0.27.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.3.1"
notebook = "^6.5.4"
tox = "^4.5.1"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
